force-app/main/default/objects/Zip_Code__c/fields/Default_City__c.field-meta.xml
<CustomField>
    <fullName>Default_City__c</fullName>
    <label>Default City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>