force-app/main/default/objects/Zip_Code__c/fields/Default_State__c.field-meta.xml
<CustomField>
    <fullName>Default_State__c</fullName>
    <label>Default State</label>
    <length>10</length>
    <type>Text</type>
</CustomField>