force-app/main/default/objects/Zip_Code__c/fields/Default_Type__c.field-meta.xml
<CustomField>
    <fullName>Default_Type__c</fullName>
    <label>Default Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>