force-app/main/default/objects/Zip_Code__c/fields/sid__c.field-meta.xml
<CustomField>
    <fullName>sid__c</fullName>
    <label>sid</label>
    <length>20</length>
    <type>Text</type>
</CustomField>