force-app/main/default/objects/Zip_Code__c/fields/zip_Code__c.field-meta.xml
<CustomField>
    <fullName>zip_Code__c</fullName>
    <externalId>true</externalId>
    <label>zip Code</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>